1998-07-18  Jochen Wiedmann  <joe@ispsoft.de> (0.1006)

	* Makefile.PL: Minor patches for fixing the test suite.

1998-07-04  Jochen Wiedmann  <joe@ispsoft.de> (0.1005)

	* Added HTML::EP::Locale.
	* Added list attribute to ep-input.
	* Added init method.
	* EP.pm.in (_ep_list): Added $self->{i}.
	* Added $self->Stop()
	* Added ep-select

1998-07-04  Jochen Wiedmann  <joe@ispsoft.de> (0.1003)

	* EP.pm.in (_ep_perl): Forgot to set $_ before evaluating in
	  package mode.
	* EP.pm.in: src attribute of ep-perl now adds DOCUMENT_ROOT,
	  if required.
	* Added Apache::EP for mod_perl support. 
	* EP.pm.in: Fixed {eval}, {package} and {comment} to
	  {'eval'}, {'package} and {'comment}

1998-06-26  Jochen Wiedmann  <joe@ispsoft.de> (0.1002)

	* lib/HTML/EP.pod: Added isa attribute to ep-package.
	* EP.pm.in: Added support for $self->{debug}.
	* ep.cgi.PL: Added setting of $self->{debug} if "debug" variable
	  is passed.
	* EP.pm.in (_ep_query): Added resulttype attribute.

1998-06-25  Jochen Wiedmann  <joe@ispsoft.de> (0.1001)

	* lib/HTML/EP.pod: Forgot to document ep-if and frieds
	* Added $self->{_ep_state}
	* Makefile.PL: Added check for MailTools, my thanks to Michael
	  Bauer <michael@h-net.com>
	* lib/HTML/EP.pod: Fixed bug in ep-query docs; a "query"
	  attribute was used instead of "statement", thanks to Michael
	  Bauer <michael@h-net.com>

1998-06-22  Jochen Wiedmann  <joe@ispsoft.de> (0.1000)

	* Initial version.
