@@ -1,3 +1,12 @@
+1998-07-24  Jochen Wiedmann  <joe@ispsoft.de> (0.1100)
+
+	* lib/HTML/EP.pod: Documented mod_perl integration.
+	* EP.pm.in: Removed epparse- and epperl-
+
+1998-07-18  Jochen Wiedmann  <joe@ispsoft.de> (0.1007)
+
+	* Makefile.PL: More minor patches for fixing the same problem ...
+
 1998-07-18  Jochen Wiedmann  <joe@ispsoft.de> (0.1006)
 
 	* Makefile.PL: Minor patches for fixing the test suite.
